assets/style.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1 > a {
  font-weight: inherit;
  color: inherit;
  padding: 10px 30px;
}

h1 > a:hover {
  color: inherit;
}

h1 svg {
  height: 50px;
  width: auto;
  margin-left: 10px;
  vertical-align: bottom;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: block;
  min-width: 320px;
  min-height: 100vh;
  text-align: center;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

#app {
  padding: 2rem;
  text-align: center;
  max-width: 800px;
  margin: 0 auto;
}

.recipe-step {
  display: grid;
  grid-template-columns: 1fr 1fr;
  text-align: left;
  border: 1px solid white;
}

.recipe-step + .recipe-step {
  border-top: none;
}

.recipe-step li {
  padding: 0px 8px
}
.actions li {
  list-style: none;
}

.actions li + li{
  padding-top: 1em
}

.recipe-list {
  margin-top: 40px;
  width: 100%;
}

.recipe-link {
  display: inline-block;
  width: 160px;
  height: 80px;
  line-height: 80px;
  padding: 6px;
  border: 1px solid white;
  color: white;;
}
.recipe-link:hover {
  color: lightsteelblue;;
}
.recipe-link span {
  display: inline-block;
  vertical-align: middle;
  line-height: 18px;
}

/* TODO add css themes, there's a fancy way of doing it */


.tips {
  text-align: left;
  margin-top: 80px;
}

